--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-figure{
-  display: inline;
+*{
+  margin:0;
+  box-sizing: border-box;
+  
+}
+section.personage-wakanda{
+  display: flex;
+  justify-content: start;
 }
