--- a/style.css
+++ b/style.css
@@ -7,3 +7,50 @@ section.personage-wakanda{
   display: flex;
   justify-content: start;
 }
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: skyblue;
+  padding:20px;
+}
+header nav ul  {
+  display: flex;
+  gap:25px;
+  margin-right:30px;
+  
+}
+.hero  {
+  display: flex;
+  justify-content: space-around;
+}
+picture.social-media-fixed{
+  gap:15px;
+}
+main .content-principal {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr ;
+  gap:15px;
+}
+.content-principal section, aside,.content-principal article{
+    background-color: slategray;
+}
+main section.personage-wakanda{
+  grid-column: 1/3;
+}
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin:auto;
+  background-color: skyblue;
+  width:80%;
+  
+}
+input[type="text"],input[type="email"]{
+  border:0;
+  border-bottom:2px solid black;
+  
+  background: transparent;
+}
