--- a/style.css
+++ b/style.css
@@ -1,56 +1,79 @@
-*{
-  margin:0;
+* {
+  margin: 0;
   box-sizing: border-box;
-  
+
 }
-section.personage-wakanda{
+
+section.personage-wakanda {
   display: flex;
   justify-content: start;
 }
+
 header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: skyblue;
-  padding:20px;
+  padding: 20px;
 }
-header nav ul  {
+
+header nav ul {
   display: flex;
-  gap:25px;
-  margin-right:30px;
-  
+  gap: 25px;
+  margin-right: 30px;
+
 }
-.hero  {
+
+.hero {
   display: flex;
   justify-content: space-around;
 }
-picture.social-media-fixed{
-  gap:15px;
+
+picture.social-media-fixed {
+  gap: 15px;
 }
+
 main .content-principal {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 2fr ;
-  gap:15px;
+  grid-template-rows: 1fr 2fr;
+  gap: 15px;
 }
-.content-principal section, aside,.content-principal article{
-    background-color: slategray;
+
+.content-principal section,
+aside,
+.content-principal article {
+  background-color: slategray;
 }
-main section.personage-wakanda{
+
+main section.personage-wakanda {
   grid-column: 1/3;
 }
-form{
+
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin:auto;
-  background-color: skyblue;
-  width:80%;
-  
+  margin: auto;
+
+  width: 50%;
+  border-radius: 20px;
+
 }
-input[type="text"],input[type="email"]{
-  border:0;
-  border-bottom:2px solid black;
-  
+
+#contact {}
+
+input[type="text"],
+input[type="email"] {
+  border: 0;
+  border-bottom: 2px solid black;
+
   background: transparent;
+}
+
+footer {
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
