--- a/style.css
+++ b/style.css
@@ -54,21 +54,34 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: auto;
+  justify-content: space-around;
 
+  margin: auto;
+  background-color: rgba(254, 253, 251, 0.5);
   width: 50%;
+
   border-radius: 20px;
+  margin-top: 40px;
+  height: 65%;
 
 }
 
-#contact {}
+#contact {
+  background: url("./images/Illustrations+Logo/Accueil/formBackground.png");
+  padding: 20px;
+  margin-top: 30px;
+  margin: auto;
+  height: 900px;
+  padding-top: 15%;
+}
 
-input[type="text"],
-input[type="email"] {
-  border: 0;
+input,
+textarea {
+  padding: 10px;
   border-bottom: 2px solid black;
-
   background: transparent;
+  border-radius: 30px;
+  width: 75%;
 }
 
 footer {
