--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ main section.personage-wakanda {
   grid-column: 1/3;
 }
 
+/*----------------------- form -----------------------------------------*/
+
 form {
   display: flex;
   flex-direction: column;
@@ -58,9 +60,9 @@ form {
 
   margin: auto;
   background-color: rgba(254, 253, 251, 0.5);
-  width: 50%;
+  width: 60%;
 
-  border-radius: 20px;
+  border-radius: 100px;
   margin-top: 40px;
   height: 65%;
 
@@ -73,6 +75,7 @@ form {
   margin: auto;
   height: 900px;
   padding-top: 15%;
+
 }
 
 input,
@@ -81,9 +84,10 @@ textarea {
   border-bottom: 2px solid black;
   background: transparent;
   border-radius: 30px;
-  width: 75%;
+  width: 50%;
 }
 
+/*-------------------------------------------------------------------------*/
 footer {
   margin: auto;
   display: grid;
