--- a/style.css
+++ b/style.css
@@ -4,10 +4,7 @@
 
 }
 
-section.personage-wakanda {
-  display: flex;
-  justify-content: start;
-}
+
 
 header nav {
   display: flex;
@@ -33,6 +30,25 @@ picture.social-media-fixed {
   gap: 15px;
 }
 
+.content-principal section,
+aside,
+.content-principal article {
+  background-color: slategray;
+}
+
+/* =================================================================*/
+.personage-wakanda .perso {
+  display: flex;
+  justify-content: start;
+  padding-top: 10px;
+  margin-left: 20px;
+}
+
+section.personage-wakanda img[alt="rival-Black-Panther"] {
+  width: 200px;
+  height: 300px;
+}
+
 main .content-principal {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -40,14 +56,36 @@ main .content-principal {
   gap: 15px;
 }
 
-.content-principal section,
-aside,
-.content-principal article {
-  background-color: slategray;
+section.personage-wakanda {
+  grid-column: 1/3;
 }
 
-main section.personage-wakanda {
-  grid-column: 1/3;
+.personage-wakanda figure {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+
+}
+
+.perso .perso-img {
+  height: 200px;
+}
+
+.perso {
+  height: 40%;
+  background-color: brown;
+  margin-top: 40px;
+
+}
+
+.perso-desc {
+  height: 200px;
+}
+
+.personage-wakanda .perso figure .perso-desc {
+  background-color: blue;
+  padding: 25px;
+  height: 100%;
 }
 
 /*----------------------- form -----------------------------------------*/
