--- a/style.css
+++ b/style.css
@@ -131,4 +131,11 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  background-color: blue;
+}
+
+footer .logo-sayna {
+  grid-row: 1/3;
+  margin: auto;
+
 }
