--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
 
 }
 
-
-
 header nav {
   display: flex;
   justify-content: space-between;
@@ -88,6 +86,12 @@ section.personage-wakanda {
   height: 100%;
 }
 
+/*-aside-*/
+aside {
+  margin: auto;
+}
+
+
 /*----------------------- form -----------------------------------------*/
 
 form {
@@ -132,10 +136,10 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   background-color: blue;
+  gap: 15px;
 }
 
 footer .logo-sayna {
   grid-row: 1/3;
   margin: auto;
-
 }
