--- a/style.css
+++ b/style.css
@@ -136,10 +136,18 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   background-color: blue;
-  gap: 15px;
+
+  padding: 6%;
 }
 
 footer .logo-sayna {
   grid-row: 1/3;
-  margin: auto;
+  MARGIN-left: 50%;
+  padding-top: 5%;
+
+}
+
+footer .pages,
+footer .social-media-footer {
+  margin-bottom: 25%;
 }
