--- a/wakanda.css
+++ b/wakanda.css
@@ -1,24 +1,55 @@
 main {
-    display: grid;
-    margin: auto;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1f 1fr 1fr 1fr 1fr;
-    gap: 2px;
+    margin: auto !important;
+    width: 90%;
 }
 
-.boxes {
-    background-color: blueviolet;
+.hero-wakanda {
+    background: #fff;
+    padding-right: 50%;
+}
+
+.content-wakanda1 {
+    padding-top: 10px;
+    background: url(./images/Illustrations+Logo/Wakanda/Pantherwakanda2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr;
+    gap: 30px;
 }
 
 .origine {
     grid-row: 1/3;
 }
 
-.cinema-afro {
-    grid-row: 4/6;
+p {
+    text-align: justify;
+    margin-bottom: 15px;
+    letter-spacing: 0.1px;
 }
 
-.decoration-BP {
-    background: url(./images/Illustrations+Logo/Wakanda/Pantherwakanda2-1.png);
+.content-wakanda2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.5fr 0.75fr 1fr;
+    gap: 30px;
+}
 
+
+
+.decoration-BP {
+    background: url(./images/Illustrations+Logo/Wakanda/Pantherwakanda2-1\(copie\).png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.cinema-afro {
+    grid-row: 2/4;
+}
+
+.space {
+    margin-left: 5%;
 }
