--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ header nav {
   padding: 20px;
 }
 
+.boxes {
+  width: 90%;
+  margin: auto;
+}
+
 header nav ul {
   display: flex;
   gap: 25px;
@@ -34,9 +39,26 @@ may not behave as expected */
   ;
 }
 
+.hero-text {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  margin: auto;
+
+
+}
+
+.hero-actor {
+  width: 60%;
+
+
+}
+
 .hero {
   display: flex;
-  justify-content: space-around;
+  justify-content: start;
+
 }
 
 
