--- a/home.css
+++ b/home.css
@@ -8,6 +8,9 @@ aside,
     background-color: slategray;
 } */
 
+.hero-actor {
+    /* background: url(./images/Illustrations+Logo/Accueil/Pantherhome1.png); */
+}
 
 /* =================================================================*/
 .personage-wakanda .perso {
@@ -64,9 +67,23 @@ section.personage-wakanda {
 /*-aside-*/
 aside {
     margin: auto;
+
 }
 
 
+
+.card {
+    background: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tchalla-actor {
+    width: 60%;
+    margin-bottom: 25%;
+
+}
 
 /*----------------------- form -----------------------------------------*/
 
