--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ may not behave as expected */
 }
 
 .hero-text {
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -49,10 +49,18 @@ may not behave as expected */
 
 }
 
+.hero-actor img {
+  width: 100%;
+  height: 90%
+}
+
 .hero-actor {
-  width: 60%;
+  width: 50%;
+  height: 100%;
 
-
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero {
