--- a/home.css
+++ b/home.css
@@ -96,6 +96,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 12px;
     justify-content: space-around;
 
     margin: auto;
@@ -120,18 +121,9 @@ form {
 
 input,
 textarea {
-    padding: 10px;
+
     border-bottom: 2px solid black;
     background: transparent;
-    border-radius: 38px;
-    width: 520px;
-    height: 56px;
-}
 
-input[type=submit] {
-    padding-left: 2%;
-    padding-right: 2%;
-    width: 174px;
-    height: 54px;
-    border-radius: 38px;
+
 }
