--- a/wakanda.css
+++ b/wakanda.css
@@ -11,9 +11,14 @@
     width: 100%
 }
 
+.hero-text {
+    margin-right: 25%
+}
+
 .content-wakanda1 {
     padding-top: 10px;
     background: url(./images/Illustrations+Logo/Wakanda/Pantherwakanda2.png);
+    backdrop-filter: blur(5px);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
